# aoc2025-py

./: .gitignore  doctest.sh  main.py  profile.sh  pyproject.toml  run.sh
days/day1/: __init__.py  star1.py  star2.py
days/day10/: __init__.py
days/day11/: __init__.py
days/day12/: __init__.py
days/day2/: __init__.py
days/day3/: __init__.py
days/day4/: __init__.py
days/day5/: __init__.py
days/day6/: __init__.py
days/day7/: __init__.py
days/day8/: __init__.py
days/day9/: __init__.py
