[project]
name = "aoc2025-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "demapples",
    "icecream>=2.1.8",
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "scipy>=1.16.3",
]

[tool.uv.sources]
demapples = { git = "https://github.com/dementati/demapples.git" }
